# vitaslic-gear-academy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
wordle-game/: Cargo.toml  build.rs
wordle-game-io/: Cargo.toml
wordle-game-io/src/: lib.rs
wordle-game-session/: Cargo.toml  build.rs
wordle-game-session-io/: Cargo.toml
wordle-game-session-io/src/: lib.rs
wordle-game-session/src/: lib.rs
wordle-game-session/tests/: tests.rs
wordle-game/src/: lib.rs
